# vault-spider

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml.example  pyproject.toml
docs/: codebase-map.html  codebase-map.json  launchd.md
eval/: README.md  dataset.yaml  eval-config.yaml  golden_queries.jsonl
eval-realistic/: README.md  dataset.yaml  eval-config.yaml  golden_queries.jsonl
eval-realistic/corpus/000 Daily Notes/: 2026-06-14.md  2026-07-11.md  2026-07-13.md
eval-realistic/corpus/200 Tech/: Bramble.md  DuckDB.md  Flat Network - Archived 2024.md  Homebrew maintenance.md  LAN-only larder.foxglove.example.md  LAN-only search.foxglove.example.md  LordByron.md  Lovelace.md  NAS Snapshot Replication.md  Obsidian dataview snippets.md  Podman rootless.md  certbot.md  (+15 more)
plans/: phase-6-results.md
scripts/: periodic_maintenance.py  setup_launchd.py  streamlit_db.py  streamlit_llm.py  streamlit_models.py  streamlit_search.py
skills/vault/: SKILL.md
tests/: conftest.py  test_backfill.py  test_chunker.py  test_cli.py  test_distill.py  test_enrich.py  test_eval.py  test_evidence.py  test_frontmatter.py  test_fusion.py  test_identity.py  test_lint.py  test_loader.py  test_mcp_server.py  test_obsidian_notes.py  test_openrouter.py  test_periodic_maintenance.py  test_query_cache.py  test_search_params.py  test_searcher_unit.py  test_settings.py  test_setup_launchd.py  test_store_sync.py  test_synthesis.py  test_utils.py  test_vault_ingestion.py  test_wrapper.py
tools/: backfill.py
vault_rag/: cli.py  config.py  envelope.py  settings.py  utils.py
vault_rag/compounding/: backfill_core.py  distill.py  lint.py
vault_rag/corpus/: chunker.py  frontmatter.py  identity.py  loader.py
vault_rag/enrich/: planner.py
vault_rag/index/: reader.py  store.py
vault_rag/llm/: openrouter.py
vault_rag/obsidian/: __init__.py  backend.py  notes.py
vault_rag/retrieval/: evidence.py  fusion.py  query_cache.py  searcher.py
vault_rag/synthesis/: answer.py
vault_spider/: cli.py  mcp_server.py  settings.py
vault_spider/enrich/: planner.py
vault_spider/evaluation/: __init__.py  dataset.py  runner.py
vault_spider/obsidian/: backend.py  notes.py
(+97 files in other folders)
