[project]
name = "vault-rag"
version = "0.1.0"
description = "Hybrid retrieval and answer generation for Markdown vault notes"
requires-python = ">=3.12"
dependencies = [
  "chromadb==1.0.21",
  "httpx==0.28.1",
  "nltk==3.9.1",
  "pandas==2.3.1",
  "python-dotenv",
  "python-ulid",
  "PyYAML==6.0.2",
  "rank-bm25",
  "streamlit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vault_rag"]

[project.scripts]
vault-rag = "vault_rag.cli:main"

[dependency-groups]
dev = [
  "pandas-stubs",
  "pyright",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
