[project]
name = "vault-spider"
version = "0.1.0"
description = "Hybrid retrieval and answer generation for Markdown vault notes"
requires-python = ">=3.12"
dependencies = [
  "chromadb==1.0.21",
  "httpx==0.28.1",
  "mcp>=1.27,<2",
  "nltk==3.9.1",
  "pandas==2.3.1",
  "python-dotenv",
  "python-ulid",
  "PyYAML==6.0.2",
  "rank-bm25",
  "streamlit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vault_spider"]

[project.scripts]
vault-spider = "vault_spider.cli:main"
vault-spider-mcp = "vault_spider.mcp_server:main"

[dependency-groups]
dev = [
  "pandas-stubs",
  "pyright",
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["vault_spider"]
